<resources>
    <string name="app_name">Minerva</string>
    <string name="title_activity_splash1">SplashActivity1</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="channel_id">channel1</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="nomeApp">Minerva</string>
    <string name="logar_google_button">Logar com o Google</string>
    <string name="ou">OU</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="ponto">&#8226;</string>
    <string name="title_activity_teste">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_principal2">MainActivity</string>
    <string name="title_activity_principal1">MainActivity</string>
    <string name="texto_inicial"><b>Minerva</b>  é o seu novo aplicativo\n<br></br>
para revisar os conteúdos do ENEM.</string>
    <string name="termo_de_uso_introducao">O Minerva apresenta os Termos de Uso (“Termos de Uso”) de seu aplicativo e seus serviços (juntos, a “Plataforma”) estabelecidos neste documento.\n\nReservamo-nos o direito de alterar ou modificar estes Termos de Uso ao nosso exclusivo critério, a qualquer momento. Qualquer alteração ou modificação a estes Termos de Uso entrará em vigor imediatamente após a publicação. Você é responsável por analisar periodicamente a mais atualizada versão destes Termos de Uso.\nOs Termos de Uso são válidos para todos os usuários de nossa Plataforma.\nO uso continuado dos nossos serviços constitui a aceitação de quaisquer alterações ou modificações feitas nos Termos de Uso.\n\n</string>
    <string name="termo_de_uso_1">1.1. Ao acessar, usar ou navegar por nossa Plataforma ("Serviço"), você concorda, expressa e voluntariamente, com todas as cláusulas destes Termos de Uso conforme abaixo detalhadas. Se você não concordar com os Termos de Uso, não utilize os Serviços do Minerva\n\n</string>
    <string name="termo_de_uso_2">2.1. Usuários: O uso das áreas públicas do Minerva está disponível para qualquer pessoa, sem necessidade de registro. Para poder usufruir dos serviços privados, reservados aos Membros, o usuário deve se registrar para se tornar um Membro do Minerva. A palavra “Usuário” se referirá a qualquer usuário que não tenha se registrado como Membro do Minerva.\n\n2.2. Membros: Qualquer pessoa com pelo menos 13 anos de idade, residente em qualquer parte do Brasil, pode se tornar Membro do Minerva. A palavra “Membro” se referirá a qualquer pessoa que tenha se registrado em nossa Plataforma.\n\n2.3. Senha e Segurança: Quando você completar o seu processo de registro, você utilizará algum serviço online para autenticação ou criará uma senha que habilitará seu acesso à nossa Plataforma. Você concorda em manter a confidencialidade da sua senha e é inteiramente responsável por qualquer dano resultante da não manutenção dessa confidencialidade e de todas as atividades que ocorrerem através do uso de sua senha. Você concorda em nos notificar imediatamente de qualquer acesso não autorizado de sua senha ou outra quebra de segurança. Você concorda que o Minerva não será responsabilizado por qualquer perda ou dano que ocorra a partir do não cumprimento desta cláusula.\n\n</string>
    <string name="termo_de_uso_3">3.1. “Suas Informações”: são definidas como qualquer informação postada por você ou que você nos dê (direta ou indiretamente), inclusive através do seu processo de registro ou do seu uso de nossa Plataforma, mensagens enviadas dentro de nossa Plataforma, ou e-mail. Você é o único responsável por Suas Informações, e nós agimos como um canal passivo para a distribuição e publicação de suas Informações Públicas (como definidas abaixo). Não temos qualquer responsabilidade relacionada ao conteúdo das postagens dos usuários em nossa Plataforma, decorrente de leis de propriedade intelectual, trabalhistas, privacidade ou outras. Não podemos nos comprometer ao controle de toda e qualquer postagem dos usuários.
\n\n3.2. “Informações Públicas”: seu nome, afiliação a companhias e localidade, bem como qualquer parte de Suas Informações que, através do uso de nossa Plataforma ou de outra maneira, você envie ou disponibilize para a inclusão em áreas públicas de nossa Plataforma.
\n\n3.3. “Informação Privada”: qualquer outra parte de Suas Informações que não sejam Informações Públicas será referida como Informação Privada.
\n\n3.4. “Áreas públicas”: são aquelas áreas de nossa Plataforma que são acessíveis para alguns ou todos os nossos Membros (p.ex., não restritas à sua visualização apenas) ou para o público geral.
\n\n3.5. Restrições. Ao considerar o uso de nossa Plataforma, você concorda que as Suas Informações:
\n3.5.1. Não devem ser fraudulentas;
\n3.5.2. Não devem infringir nenhum direito autoral de terceiros, patente, marca registrada, direito de distribuição ou outro direito de propriedade intelectual, de publicação ou privacidade;
\n3.5.3. Não devem violar nenhuma lei, estatuto, ordenação ou regulamento;
\n3.5.4. Não devem ser difamatórias, caluniosas, ameaçadoras ou abusivas;
\n3.5.5. Não devem ser obscenas ou conter pornografia, pornografia infantil, ou fotos de pessoas despidas;
\n3.5.6. Não devem conter vírus, cavalos de tróia, worms, time bombs, cancelbots ou outras rotinas de programação que possam danificar, interferir, interceptar ou desapropriar qualquer sistema, dado ou informação pessoal;
\n3.5.7. Não devem nos responsabilizar ou fazer com que percamos (total ou parcialmente) o serviço do nosso Provedor de Internet ou outros fornecedores;
\n3.5.8. Não devem criar links direta ou indiretamente a qualquer material que você não tenha direito de incluir.
\n\n3.6. Obrigações: Você concorda também que deverá nos informar um endereço válido de e-mail, tanto na hora de seu registro conosco quanto a cada vez que o seu e-mail mudar, uma vez que o e-mail é usado para realizar a autenticação no aplicativo, e também para interações entre você e o Minerva (envio de e-mails, abertura de chamados, notificações de cobrança/pagamentos, avisos sobre o serviço, etc).
\n\n3.7. Consentimento de Divulgação. Você entende e concorda que o Minerva pode divulgar Suas Informações se requerida a fazê-lo por lei ou por acreditar de boa fé que essa divulgação é razoável e necessária para:
\n3.7.1. Cooperar com um procedimento judicial, uma ordem judicial ou processo legal sobre nós ou nossa Plataforma;
\n3.7.2. Reforçar os Termos de Uso;
\n3.7.3. Replicar a respeito da infração do direito de terceiros por Suas Informações;
\n3.7.4. Proteger os direitos, propriedades ou a segurança pessoal do Minerva.
\n\n3.8. O Minerva reserva-se o direito, a seu exclusivo critério, de suspender ou terminar o seu uso de nossa Plataforma e de nossos Serviços, de recusar todo e qualquer uso corrente ou futuro de todas ou algumas partes de nossa Plataforma e/ou Serviços.\n\n
</string>
    <string name="texto_comte1"><b> &#160; &#160; &#8226;</b> Contexto histórico e social</string>
    <string name="texto_comte2"><b> &#160; &#160; &#8226;</b> Viveu durante a revolução francesa.</string>
    <string name="texto_comte3"><b> &#160; &#160; &#8226;</b> Viveu durante a revolução industrial.</string>
    <string name="texto_comte4"><b> &#160; &#160; &#8226;</b> Viveu o surgimento da ciência moderna.</string>
    <string name="texto_comte5"><b> &#160; &#160; &#8226;</b> Suas aspirações e experiências o levaram a querer ordenar o mundo para obter um progresso através de tal ordem, isso além de gerar o movimento positivista, gerou a ideia de uma ciência capaz de descrever os fenômenos sociais de forma universal, tal ideia constituiu a sociologia.<br></br></string>
    <string name="texto_comte6"><b> O positivismo</b></string>
    <string name="texto_comte7">O positivismo adota critérios racionais, históricos e sistemáticos para entender as transformações sociais:</string>
    <string name="texto_comte8"><b> &#160; &#160; &#8226;</b> Corrente sociológica do século 19.</string>
    <string name="texto_comte9"><b> &#160; &#160; &#8226;</b> Era entendida como o conhecimento verdadeiro sobre a sociedade obtido por meio da ciência.</string>
    <string name="texto_comte10"><b> &#160; &#160; &#8226;</b> Tinha o propósito de alcançar a ordem e o progresso através da ciência.</string>
    <string name="texto_comte11"><b>Lei dos 3 estados</b></string>
    <string name="texto_comte12">Com base nas ideias positivistas, Comte criou a teoria das três Leis dos estados. ele afirmava que as sociedades passariam por três estados de pensamento:</string>
    <string name="texto_comte13"><b> &#160; &#160; &#8226;</b> Estado teológico: Os fenômenos sociais são explicados através de ações divinas.</string>
    <string name="texto_comte14"><b> &#160; &#160; &#8226;</b> Estado metafísico: Os acontecimentos sociais são explicados através de abstrações teóricas.</string>
    <string name="texto_comte15"><b> &#160; &#160; &#8226;</b> Estado positivo: Os acontecimentos são explicados através de científicos elaborados com base na razão.</string>
    <string name="texto_comte16">Para Comte o progresso social só seria possível no estado positivo onde uma sociedade por meio do uso científicos dos dados obtidos pela razão se ordenasse.</string>
    <string name="texto_weber1"><b> Ações sociais:</b></string>
    <string name="texto_weber2">Weber acreditava que o estudo da sociedade (sociologia) deveria levar em conta nossos desejos, vontades e costumes. Esses desejos e costumes juntamente com nossa razão (para ele), movem nossas ações sociais que guiam a sociedade. As ideias, as crenças e os valores eram os principais motivos das mudanças sociais segundo Max. Ele acreditava na liberdade de um sujeito agir e modificar a sua realidade e por meio da ação social guiar a sociedade.</string>
    <string name="texto_weber3"><b>Tipos de ações sociais:</b></string>
    <string name="texto_weber4">As ações sociais irracionais são todas aquelas que acontecem de forma não pensada e não controlada:</string>
    <string name="texto_weber5"><b> &#160; &#160; &#8226;</b> Ação social irracional afetiva: Ações movidas por sentimentos como ódio, amor, paixão, ressentimento, orgulho entre outros.</string>
    <string name="texto_weber6"><b> &#160; &#160; &#8226;</b> Ação social irracional tradicional: Ações feitas por meio do cotidiano, por meio dos costumes.</string>
    <string name="texto_weber7">As ações sociais racionais são todas aquelas que acontecem de forma pensada e controlada:</string>
    <string name="texto_weber8"><b> &#160; &#160; &#8226;</b> Ação social racional com relação a fins: Ações que fazemos através de escolhas racionais com a finalidade de decidir o melhor caminho ou forma de seguir.</string>
    <string name="texto_weber9"><b> &#160; &#160; &#8226;</b> Ação social racional movida por valores: Ações movidas por valores morais, éticos, religiosos, políticos, crenças entre outros.</string>
    <string name="texto_weber10"><b>A Sociologia Compreensiva</b></string>
    <string name="texto_weber11">A sociologia compreensiva considera a motivação dos indivíduos e grupos diante das ações sociais que praticam, levando em conta a sociedade em que vivem. A realidade social é o resultados das formas de relação entre os sujeitos. Max Weber entendia por sociologia compreensiva uma ciência que se propõe a compreender a atividade social e, deste modo, explicar causalmente seu desenrolar e seus efeitos. Para explicar o mundo social, importa compreender também a ação dos seres humanos do ponto de vista do sentido e dos valores.</string>
</resources>